# novel-to-audio-drama

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  web_ui.py
data/upload/: .txt
src/: __init__.py  character_manager.py  novel_init.py  novel_parser.py  tts_generator.py  voice_manager.py
